# PyFAT12-DD-001

./: README.md  dd-001-boot-convert-to-d81.py  setup.cfg
dd-001-boot/: dd-001-boot.d81  dd001boot-with-bootsector.img  dd001boot.img
dd-001-boot/files_data/: EQUINOX.PRG  FIRE.PRG  FROSTY.PRG  GAME  L1  L3  MOUSE1.PRG  MOUSE2.PRG  PYJAMAS.PRG  QUACK.PRG  V-MAX
dd-001-boot/files_with_loadaddr/: EQUINOX.PRG  FIRE.PRG  FROSTY.PRG  GAME  PYJAMAS.PRG  QUACK.PRG  V-MAX
dd-001-boot/files_with_loadaddr_runnable/: equinox.prg  fire.prg  frosty.prg  l1  l3  mouse1.prg  mouse2.prg  pyjamas.prg  quack.prg
pyfat12/: floppy.py  fs.py
